added some integration tests and reverted Spring Boot version to 3.4.4